syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.dev4any1.grpc";
option java_outer_classname = "EchoProto";

service EchoService {
    rpc Echo (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}